Bug 405298 - Setting a non-square icon and choosing "clear icon" doesn't reset the width
Summary: Setting a non-square icon and choosing "clear icon" doesn't reset the width
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.15.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-10 10:40 UTC by Luca Weiss
Modified: 2019-03-11 12:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Weiss 2019-03-10 10:40:28 UTC
SUMMARY
Setting a non-square icon and choosing "clear icon" doesn't reset the width of the button in the panel

STEPS TO REPRODUCE
1. Under "Icon" in the kickoff settings, choose a non-square icon (e.g. the windows xp start button ;) )
2. Click apply, see that the button has the correct width
3. Click "Clear Icon" and click apply
4. Observe, that the width of the button didn't change but stayed the same as before (so too wide)

OBSERVED RESULT
Kickoff button in panel is too wide

EXPECTED RESULT
Kickoff button in panel should resize to fit the default icon

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 1 Kai Uwe Broulik 2019-03-11 12:28:10 UTC
Git commit 017954185c83545201e861a1c419a6c2d0c1081a by Kai Uwe Broulik.
Committed on 11/03/2019 at 12:27.
Pushed by broulik into branch 'master'.

[Icon Item] Also clear image icon when using Plasma Svg

When changing an IconItem from using a local image (e.g. PNG file) to using a Plasma themed icon,
the implicit size wasn't updated since the old image was still loaded in m_imageIcon.
Clearing it when clearing the other icon stores fixes this.

Differential Revision: https://phabricator.kde.org/D19674

M  +1    -0    src/declarativeimports/core/iconitem.cpp

https://commits.kde.org/plasma-framework/017954185c83545201e861a1c419a6c2d0c1081a