[Icon Item] Also clear image icon when using Plasma Svg

When changing an IconItem from using a local image (e.g. PNG file) to using a Plasma themed icon,
the implicit size wasn't updated since the old image was still loaded in m_imageIcon.
Clearing it when clearing the other icon stores fixes this.

BUG: 405298

Differential Revision: https://phabricator.kde.org/D19674